--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta id="meta-title" property="og:title" content="OverHyped Dudes - ???">
+	<meta id="meta-desc" property="og:description" content="You found yourself in a very strange place... come later!">
+	<meta id="meta-image" name="og:image" content="https://overhyped.fun/icon.png" itemprop="image">
+	<meta name="twitter:card" content="summary">
     <title>???</title>
     <link rel="stylesheet" href="main.css">
 </head>
